--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.468.0",
+    "motion": "^11.15.0",
     "next": "15.1.1",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
