--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-icons": "^5.4.0",
     "react-type-animation": "^3.2.0",
     "recharts": "^2.15.0",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2",
